--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">MWYN_Chat</string>
+    <string name="app_title">MWYN-Select Contact</string>
     <string name="action_settings">Settings</string>
 </resources>
